--- a/junit/build.xml
+++ b/junit/build.xml
@@ -34,7 +34,7 @@
 	<!-- Compiles server code to .class copies non-CVS/non-.java to the dest dir -->	
 	<target name="compile" depends="init">
 		<!-- Compile the java code from ${java} into ${build} -->
-		<javac srcdir="${src}" destdir="${classes}" debug="${debug}" classpath="${servlet_lib}" />
+		<javac includeantruntime="false" srcdir="${src}" destdir="${classes}" debug="${debug}" classpath="${servlet_lib}" />
 
 		<!-- Copy any other non-cvs non-java fils to ${classes} -->
 		<copy todir="${classes}">
